test/sema/imported-module-has-file-scope.delta
// RUN: not %delta -typecheck -I%p/inputs/imported-module-has-file-scope %s %p/inputs/imported-module-has-file-scope/second-file.delta | %FileCheck %s

import "foo"

// CHECK: second-file.delta:2:5: error: unknown identifier 'foo'
